bootstrap/argocd/resources/argocd.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: argocd
      sectionName: https-gw
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          set:
          - name: X-Robots-Tag
            value: "noindex, nofollow"
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
